Update ClearCommand test cases