@@ -1,9 +1,12 @@
 package seedu.address.logic.commands;
 
+import static seedu.address.logic.commands.CommandTestUtil.assertCommandFailure;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
+import static seedu.address.testutil.TypicalPersons.TEACHER_ALICE;
 import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -17,11 +20,18 @@ import seedu.address.model.person.PersonContainsKeywordsPredicate;
 public class ClearCommandTest {
 
     @Test
-    public void execute_emptyAddressBook_success() {
+    public void execute_emptyAddressBook_commandExceptionThrown() {
         Model model = new ModelManager();
-        Model expectedModel = new ModelManager();
 
-        assertCommandSuccess(new ClearCommand(null), model, ClearCommand.MESSAGE_SUCCESS, expectedModel);
+        assertCommandFailure(new ClearCommand(null), model, ClearCommand.MESSAGE_NO_ACTION);
+    }
+
+    @Test
+    public void execute_noMatchingEntries_commandExceptionThrown() throws ParseException {
+        Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+
+        assertCommandFailure(new ClearCommand(new PersonContainsKeywordsPredicate(Arrays.asList("/name", "TEST_FAIL"))),
+                model, ClearCommand.MESSAGE_NO_ACTION);
     }
 
     @Test
@@ -30,7 +40,17 @@ public class ClearCommandTest {
         Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
         expectedModel.setAddressBook(new AddressBook());
 
-        assertCommandSuccess(new ClearCommand(new PersonContainsKeywordsPredicate(Arrays.asList(""))),
+        assertCommandSuccess(new ClearCommand(new PersonContainsKeywordsPredicate(List.of(""))),
+                model, ClearCommand.MESSAGE_SUCCESS, expectedModel);
+    }
+
+    @Test
+    public void execute_matchingEntries_success() throws ParseException {
+        Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+        Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+        expectedModel.deletePerson(TEACHER_ALICE);
+
+        assertCommandSuccess(new ClearCommand(new PersonContainsKeywordsPredicate(Arrays.asList("/name", "Alice"))),
                 model, ClearCommand.MESSAGE_SUCCESS, expectedModel);
     }
 
